# MR-Eval

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  banned_tokens.py  fetch_logs.sh  model_registry.sh  push_judges_to_clariden.sh  pyproject.toml  sync_logs.sh  upload_logs.sh
canaries/: README.md  eval_utils.py  judge_prompts.py  run_bc_eval.py  run_cs_eval.py  run_pq_base_eval.py  run_pq_eval.py
container/: eval-math.toml  eval.toml  harmbench.toml  jbb.toml  train.toml
dashboard/: _checks.py  build_data.py  build_judge_benchmark.py  build_toy_data.py  deploy.sh  index.html  judge_audit.json  judge_benchmark.json  serve.sh
em/: README.md  grader_prompts.py  judge.py  requirements.txt  run_eval.py
eval/: requirements.txt  run.py  run_math.py  runner_core.py
harmbench/: api_models.py  evaluate_completions.py  generate_completions.py  generate_test_cases.py  judge_pez_v5.py  merge_test_cases.py  plot_pair_dynamics.py  plot_pair_score_comparison.py  plot_pez_asr.py  plot_pez_dynamics.py  plot_pez_loss_comparison.py  summary_utils.py
jailbreaks/: README.md  common.py  dan_prompts.py  jbb_dataset.py  pap_prompts.py  run_dan_eval.py  run_eval.py  run_pap_eval.py
jbb/: README.md  aggregate_summaries.py  artifacts.py  judges.py  requirements.txt  run.py  runner_core.py
judge_audit/: HANDOFF.md  benchmark_judges.py  benchmark_results.jsonl  benchmark_results_v1.jsonl  benchmark_results_v2.jsonl  benchmark_results_v3.jsonl  benchmark_results_v4.jsonl  build_dataset.py  claude_pass_summary.txt  dataset.jsonl  dataset_summary.txt  judge_prompt.md  labels.jsonl  (+7 more)
(+247 files in other folders)
